--- a/custom_components/formlabs/manifest.json
+++ b/custom_components/formlabs/manifest.json
@@ -2,10 +2,13 @@
   "domain": "formlabs",
   "name": "Formlabs",
   "config_flow": true,
-  "documentation": "https://example.invalid",
-  "integration_type": "hub",
+  "documentation": "https://github.com/Barytonsax/ha-formlabs",
+  "issue_tracker": "https://github.com/Barytonsax/ha-formlabs/issues",
+  "integration_type": "service",
   "iot_class": "cloud_polling",
   "requirements": [],
-  "codeowners": [],
+  "dependencies": [],
+  "codeowners": ["@Barytonsax"],
+  "loggers": ["custom_components.formlabs"],
   "version": "0.1.0"
 }
